--- a/index1.html
+++ b/index1.html
@@ -88,7 +88,11 @@
 <h1>&nbsp;</h1>
 
 
-
+<div id="star">
+      <div class="stars-01"></div>
+      <div class="stars-02"></div>
+      <div class="stars-03"></div>
+  </div>
 <!-- stars background start-->
     <!-- <div id="star">
       <div class="stars-01"></div>
@@ -480,6 +484,7 @@
       <div class="stars-02"></div>
       <div class="stars-03"></div>
       <div class="stars-04"></div>
+      
      </div> 
    
     <!--stars background end-->
