--- a/index1.html
+++ b/index1.html
@@ -266,7 +266,7 @@
           <p style="font-size:  17px"> The idea aims at providing the plus two students information about different entrance exams and  colleges to pursue at. Many students get misguided due to lack of information regarding good colleges and their selection procedures. Our project aims at not letting the students lose any golden opportunity of grabing good colleges..</p>
 
                  <h4>Sincerely,</h4> 
-                   <h4>[OUR TEAM, INFORMATIVE APPROACH]</h4>
+                   <h4>[Our Team, Informative Approach]</h4>
           </p>
         </div>
         <div class="col-sm-5">
@@ -415,6 +415,7 @@
               <h3>Niraj Kumar Gupta</h3>
               <p>MNNIT'24 CSE</p>
             </div>
+            <a href="https://www.linkedin.com/in/niraj-kumar-gupta-b26677204/"><i class="fab fa-linkedin-in"></i></a>
             <p class="team-text">Director & Web Developer at Informative Approach.</p>
           </div>
         </div>
@@ -430,7 +431,10 @@
               <h3>Arpit Gupta</h3>
               <p>MNNIT'24 EE</p>
             </div>
+
+            <a href="https://www.linkedin.com/in/arpit-/"><i class="fab fa-linkedin-in"></i></a>
             <p class="team-text">Director & Web Developer at Informative Approach.</p>
+
           </div>
         </div>
       </div> 
@@ -445,6 +449,7 @@
               <h3>Ravi Kumar Sah</h3>
               <p>MNNIT'24 CSE</p>
             </div>
+            <a href="https://www.linkedin.com/in/ravi-kumar-sah-306012204/"><i class="fab fa-linkedin-in"></i></a>
             <p class="team-text">Director & Web Developer at Informative Approach.</p>
           </div>
         </div>
@@ -460,6 +465,7 @@
               <h3>Shorya Mittal</h3>
               <p>MNNIT'24 EE</p>
             </div>
+            <a href="https://www.linkedin.com/in/shorya-mittal-7ba53520a/"><i class="fab fa-linkedin-in"></i></a>
             <p class="team-text">Director & Web Developer at Informative Approach.</p>
           </div>
         </div>
@@ -533,7 +539,7 @@
           <li class="link_name">Feedback Form</li>
           <li><a href="Feedbackform.html"><button style="background-color:green; color:white ; border:2px solid red;">Click Me</button></a></li>
           <li><a href="#"><b>Email address</b></a></li>
-          <li><a href="#">Informativeapproach@gmail.com</a></li>
+          <li><a href="#">Informativeapproach<br>@gmail.com</a></li>
         </ul>
         <ul class="box input-box">
           <li class="link_name">Subscribe</li>
