--- a/index1.html
+++ b/index1.html
@@ -35,10 +35,10 @@
       </div>
     </header>
     <a name="home"></a>
-    <section class="home">
+    <section class="home" id="sliders" data-autoplay='true' data-timer='2000'>
       <img src="https://assets-247moms.sfo2.cdn.digitaloceanspaces.com/2018/09/6397.jpg" class="video-slide active">
       <img src="https://images.pexels.com/photos/5940831/pexels-photo-5940831.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="video-slide ">
-      <img src="https://images.pexels.com/photos/6238005/pexels-photo-6238005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="video-slide active">
+      <img src="https://images.pexels.com/photos/6238005/pexels-photo-6238005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="video-slide ">
       <img src="https://images.pexels.com/photos/6146970/pexels-photo-6146970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="video-slide ">
       <img src="https://images.pexels.com/photos/6238133/pexels-photo-6238133.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="video-slide ">
 
@@ -602,6 +602,18 @@
         sliderNav(i);
       });
     });
+
+    /// automatic image slider //////
+    var autoslideActive=$('#sliders').data('autoplay');
+    var timing=$('#sliders').data('timer') || 2000;
+    if(autoslideActive){
+      setInterval(function(){
+        var cur = $(".video-slide.active").index();
+        var nxt = (cur + 1) % slides.length;
+        console.log(nxt);
+        sliderNav(nxt);
+      }, timing);
+    }
     </script>
     <script>
         $( ".change" ).on("click", function() {
