--- a/index1.html
+++ b/index1.html
@@ -537,7 +537,7 @@
         </ul>
         <ul class="box">
           <li class="link_name">Feedback Form</li>
-          <li><a href="Feedbackform.html"><button style="background-color:green; color:white ; border:2px solid red;">Click Me</button></a></li>
+          <li><a href="Feedbackform.html"><button style="background-color:green; color:white ; border:none; padding:6px;">Click Me</button></a></li>
           <li><a href="#"><b>Email address</b></a></li>
           <li><a href="#">Informativeapproach<br>@gmail.com</a></li>
         </ul>
