--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script> 
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
      <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
-     <script src="feedback.js"></script>
+     <script src="Subscribe.js"></script>
   </head>
   <body>
 
