--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script> 
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
      <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
-     <script src="Subscribe.js"></script>
+     
   </head>
   <body>
 
@@ -547,8 +547,8 @@
         <ul class="box input-box">
           <li class="link_name">Subscribe</li>
           <li><input type="email" placeholder="Enter Your Email" id="email"/></li>
-           <button onclick="signUp()" id="signUp" style="padding:10px;">Subscribe</button>
-          <!-- <input type="button" value="Subscribe"> --></li>
+           <!-- <button onclick="signUp()" id="signUp" style="padding:10px;">Subscribe</button> -->
+          <li><input type="button" value="Subscribe"></li>
         </ul>
         
       </div>
