password reset option

--- a/Feedbackform.html
+++ b/Feedbackform.html
@@ -108,7 +108,7 @@ $(function()
             $btn = $(this);
             $btn.prop('type','button' ); 
             $btn.prop('orig_label',$btn.text());
-            $btn.text('Sending ...');
+            $btn.text('Thankyou For Your Feedback');
         });
         
 
