--- a/index1.html
+++ b/index1.html
@@ -418,7 +418,7 @@
               <h3>Niraj Kumar Gupta</h3>
               <p>MNNIT'24 CSE</p>
             </div>
-            <a href="https://www.linkedin.com/in/niraj-kumar-gupta-b26677204/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/niraj-kumar-gupta-b26677204/" style="border:3px solid white; padding: 0px 5px; border-radius: 50%;"><i class="fab fa-linkedin-in"></i></a>
             <p class="team-text">Director & Web Developer at Informative Approach.</p>
           </div>
         </div>
@@ -435,7 +435,7 @@
               <p>MNNIT'24 EE</p>
             </div>
 
-            <a href="https://www.linkedin.com/in/arpit-/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/arpit-/" style="border:3px solid white; padding: 0px 5px; border-radius: 50%;"><i class="fab fa-linkedin-in"></i></a>
             <p class="team-text">Director & Web Developer at Informative Approach.</p>
 
           </div>
@@ -452,7 +452,7 @@
               <h3>Ravi Kumar Sah</h3>
               <p>MNNIT'24 CSE</p>
             </div>
-            <a href="https://www.linkedin.com/in/ravi-kumar-sah-306012204/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/ravi-kumar-sah-306012204/" style="border:3px solid white; padding: 0px 5px; border-radius: 50%;"><i class="fab fa-linkedin-in"></i></a>
             <p class="team-text">Director & Web Developer at Informative Approach.</p>
           </div>
         </div>
@@ -468,7 +468,8 @@
               <h3>Shorya Mittal</h3>
               <p>MNNIT'24 EE</p>
             </div>
-            <a href="https://www.linkedin.com/in/shorya-mittal-7ba53520a/"><i class="fab fa-linkedin-in"></i></a>
+           &nbsp;
+            <a href="https://www.linkedin.com/in/shorya-mittal-7ba53520a/" style="border:3px solid white; padding: 0px 5px; border-radius: 50%;"><i class="fab fa-linkedin-in"></i></a>
             <p class="team-text">Director & Web Developer at Informative Approach.</p>
           </div>
         </div>
