--- a/sign-up.html
+++ b/sign-up.html
@@ -17,6 +17,8 @@
 <button onclick="signUp()" id="signUp"> Sign Up </button>
 <button onclick="signIn()" id="signIn"> Sign In </button>
 <button onclick="signOut()" id="signOut"> Sign Out </button>
+<br>
+<p>&nbsp;&nbsp;If you have forgot your password then send us email:<button onclick="document.location='mailto:informativeapproach@gmail.com' subject='Regarding password reset' & message= 'i have forgotten my password please send me the reset link.' ">Send email</button>.We will send the reset link soon.</p>
 
 
 
