contact us form

--- a/contactus.html
+++ b/contactus.html
@@ -44,7 +44,7 @@
   </section>
   <!-- /contact1 -->
   
-<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> 
 <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -67,8 +67,8 @@
 
 			Email.send({
         SecureToken:"fbf31702-bb7f-4a4e-9c1c-4ccf17ee777f",
-				To: 'nirajgupta4606@gmail.com',
-				From: "niraj.20204128@mnnit.ac.in",
+				To: 'informativeapproach@gmail.com',
+				From: "arpitgupta1014@gmail.com",
 				Subject: "New message on contact from "+name,
 				Body: Body
 			}).then(
