--- a/index1.html
+++ b/index1.html
@@ -29,9 +29,10 @@
           <a href="#IIT/NIT"><i class="glyphicon glyphicon-hourglass"></i> IITs || NITs</a>
           <a href="#exam"><i class="glyphicon glyphicon-duplicate"></i> Exams</a>
           <a href="sign-up.html"><i class="glyphicon glyphicon-user"></i> Sign up</a>
+          <a href="contactus.html"><i class="glyphicon glyphicon-user"></i> contact us</a>
 
           <!-- <div class="mode"> -->
-       <a style="color:#00fa7b">Dark mode:</a>           
+       <a style="color:#00fa7b">Dark:</a>           
        <span class="change">OFF</span>
     <!-- </div> -->
         </div>
