--- a/sign-up.html
+++ b/sign-up.html
@@ -18,8 +18,8 @@
 <button onclick="signIn()" id="signIn"> Sign In </button>
 <button onclick="signOut()" id="signOut"> Sign Out </button>
 <br>
-<p>&nbsp;&nbsp;If you have forgot your password then send us email:<button onclick="document.location="mailto:informativeapproach@gmail.com & subject= Regarding password reset & message = i have forgotten my password please send me the reset link. >Send email</button>.We will send the reset link soon.</p>
-
+<br>
+<p>&nbsp;&nbsp;If you have forgot your password then send your query to &nbsp;&nbsp;our email:<button onclick="document.location='mailto:informativeapproach@gmail.com'">Send email</button>.We will send the reset link soon.</p>
 
 </div>
 
