--- a/Feedbackform.html
+++ b/Feedbackform.html
@@ -344,7 +344,7 @@ $(function()
                 message =>{
                     //console.log (message);
                     if(message=='OK'){
-                    alert('Your mail has been send. Thank you for connecting.');
+                    alert('🥰🥰🥰🥰 Your mail has been send. Thankyou for your feedback 🥰🥰🥰🥰.');
                     }
                     else{
                         console.error (message);
